# pixels-wrapped

./: README.md  app.py  media_processor.py  models.py  pyproject.toml  routes.py
.upm/: store.json
static/css/: custom.css
static/js/: upload.js
templates/: base.html  index.html  results.html
